--- a/kocom.conf
+++ b/kocom.conf
@@ -11,7 +11,7 @@
 #type = serial
 #serial_port = /dev/ttyUSB0
 type = socket
-socket_server = 192.168.219.118
+socket_server = 192.168.0.20
 socket_port = 8899
 
 
@@ -25,11 +25,11 @@ socket_port = 8899
 # mqtt_username (required when mqtt_allow_anonymous=False) : mqtt username
 # mqtt_password (required when mqtt_allow_anonymous=False) : mqtt password
 #------------
-mqtt_server = 192.168.219.130
+mqtt_server = 192.168.0.73
 mqtt_port = 1883
 mqtt_allow_anonymous = False
-mqtt_username = admin
-mqtt_password = admin3844
+mqtt_username = mqtt
+mqtt_password = 
 
 
 [Device]
@@ -41,7 +41,7 @@ mqtt_password = admin3844
 #  * supported devicetypes : light, gas, fan, thermo, elevator
 #  * supported roomnames : myhome, livingroom, bedroom, room1, room2
 #------------
-enabled = light, fan, thermo_livingroom, thermo_bedroom, thermo_room1, thermo_room2, elevator
+enabled = thermo_livingroom, thermo_bedroom, thermo_room1, thermo_room2, thermo_room3
 
 
 [Elevator]
