--- a/kocom.conf
+++ b/kocom.conf
@@ -41,7 +41,7 @@ mqtt_password =
 #  * supported devicetypes : light, gas, fan, thermo, elevator
 #  * supported roomnames : myhome, livingroom, bedroom, room1, room2
 #------------
-enabled = thermo_livingroom, thermo_bedroom, thermo_room1, thermo_room2, thermo_room3
+enabled = thermo_livingroom, thermo_bedroom, thermo_room1, thermo_room2
 
 
 [Elevator]
